package LearnBuilder;

public interface CarInterface {

    public void setName(String name);
    public void setType(String type);
    public void setEngine(Engine engine);
    public void setColor(String color);
    public void setComputer(Computer computer);

}
