@startuml

title __LEARNBUILDER's Class Diagram__\n

  namespace  {
    namespace earnBuilder {
      class LearnBuilder.CarDirector {
      }
    }
  }
  

  namespace  {
    namespace earnBuilder {
      interface LearnBuilder.CarInterface {
          {abstract} + setColor()
          {abstract} + setComputer()
          {abstract} + setEngine()
          {abstract} + setName()
          {abstract} + setType()
      }
    }
  }
  

  namespace  {
    namespace earnBuilder {
      class LearnBuilder.Computer {
          - model : String
          - processor : float
          - ram : byte
          + Computer()
          + getModel()
          + getProcessor()
          + getRam()
      }
    }
  }
  

  namespace  {
    namespace earnBuilder {
      class LearnBuilder.Director {
          + buildNormalCar()
          + buildSupportCar()
      }
    }
  }
  

  namespace  {
    namespace earnBuilder {
      class LearnBuilder.Engine {
          - pistunSize : String
          - power : String
          - type : String
          + Engine()
          + getPistunSize()
          + getPower()
          + getType()
      }
    }
  }
  

  namespace  {
    namespace earnBuilder {
      class LearnBuilder.Main {
          {static} + display()
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace earnBuilder {
      class LearnBuilder.NormalCar {
          - color : String
          - name : String
          - type : String
          + NormalCar()
          + getColor()
          + getComputer()
          + getEngine()
          + getName()
          + getType()
      }
    }
  }
  

  namespace  {
    namespace earnBuilder {
      class LearnBuilder.NormalCardBuilder {
          - color : String
          - name : String
          - type : String
          + build()
          + setColor()
          + setComputer()
          + setEngine()
          + setName()
          + setType()
      }
    }
  }
  

  namespace  {
    namespace earnBuilder {
      class LearnBuilder.SupportCar {
          - color : String
          - fual : int
          - name : String
          - type : String
          + SupportCar()
          + getColor()
          + getComputer()
          + getEngine()
          + getFual()
          + getName()
          + getType()
          + setFual()
      }
    }
  }
  

  namespace  {
    namespace earnBuilder {
      class LearnBuilder.SupportCarBuilder {
          - color : String
          - name : String
          - type : String
          + build()
          + setColor()
          + setComputer()
          + setEngine()
          + setName()
          + setType()
      }
    }
  }
  

  LearnBuilder.NormalCar o-- LearnBuilder.Computer : computer
  LearnBuilder.NormalCar o-- LearnBuilder.Engine : engine
  LearnBuilder.NormalCardBuilder .up.|> LearnBuilder.CarInterface
  LearnBuilder.NormalCardBuilder o-- LearnBuilder.Computer : computer
  LearnBuilder.NormalCardBuilder o-- LearnBuilder.Engine : engine
  LearnBuilder.SupportCar o-- LearnBuilder.Computer : computer
  LearnBuilder.SupportCar o-- LearnBuilder.Engine : engine
  LearnBuilder.SupportCarBuilder .up.|> LearnBuilder.CarInterface
  LearnBuilder.SupportCarBuilder o-- LearnBuilder.Computer : computer
  LearnBuilder.SupportCarBuilder o-- LearnBuilder.Engine : engine


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
